--- a/public/home.html
+++ b/public/home.html
@@ -40,6 +40,7 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
 <!-- we add the axios library to use for http ajax requests -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 <!-- main js logic of the to do list app -->
