--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 	</div>
 	<!-- we add the axios library to use for http ajax requests -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-	
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
 	<!-- login js -->
 	<script>	
 		 
@@ -61,8 +61,11 @@
 			
 			//the result returned wil be contained inside the response.data object
 			if(response.data.message == "Authenticated"){
+
+				Cookies.set('key',response.data.key)
+				Cookies.set('userId',response.data.id)
 				//if logged in change url to the home with id qury parameter
-                window.location.href = "/home.html?id="+response.data.id
+                window.location.href = "/home.html"
 			}else{
                  alert("wrong credentials") 
 			}
@@ -78,7 +81,15 @@
 		
 			login()
 		}
+		
+		function loggedIn(){
+			let key = Cookies.get('key')
+			if(key){
+				window.location.href = "/home.html"
+			}
+		}
 
+		loggedIn()
 
 	</script>
 </body>
